[gd_scene load_steps=56 format=3 uid="uid://fljx3pm6vd7k"]

[ext_resource type="Texture2D" uid="uid://ddt18x30kjjmp" path="res://assets/Character/body/body.png" id="1_18yk5"]
[ext_resource type="Script" path="res://Customization/player.gd" id="1_d21fy"]
[ext_resource type="PackedScene" uid="uid://dyoan5phxns82" path="res://Menu/achievement/slime_killer.tscn" id="2_6u2q7"]
[ext_resource type="Texture2D" uid="uid://dfs4nij67j226" path="res://assets/Character/hair/hair2.png" id="2_stnuo"]
[ext_resource type="PackedScene" uid="uid://b1wjqga8hw57s" path="res://Menu/achievement/slime_killermax.tscn" id="3_48rf2"]
[ext_resource type="Texture2D" uid="uid://ba28jlm8e6k6m" path="res://assets/Character/outfit/outfit1.png" id="3_kde5t"]
[ext_resource type="PackedScene" uid="uid://7yb004olnbh6" path="res://Menu/menu.tscn" id="4_6jm0q"]
[ext_resource type="Texture2D" uid="uid://b0xun5rcnfovr" path="res://assets/Character/outfit/boxer.png" id="4_c6dog"]
[ext_resource type="Texture2D" uid="uid://7rd0x02oxatk" path="res://assets/Character/accessories/hat1.png" id="5_rxn3l"]
[ext_resource type="Texture2D" uid="uid://lx1si0k5snv" path="res://Unarmed_Run_full (3).png" id="10_1thqf"]
[ext_resource type="Script" path="res://Player/weapon.gd" id="10_gc2fy"]
[ext_resource type="PackedScene" uid="uid://d21kic63b2v2h" path="res://Player/Arrow.tscn" id="11_ewik3"]
[ext_resource type="AudioStream" uid="uid://d1on4frr3lskk" path="res://ArrowShot.mp3" id="11_jhp4i"]
[ext_resource type="AudioStream" uid="uid://bi234a43q88g1" path="res://DrawSound (online-audio-converter.com).mp3" id="12_gllyj"]
[ext_resource type="Texture2D" uid="uid://b835h34od5ktj" path="res://assetsbow/bowcolor.png" id="15_sgy6k"]
[ext_resource type="AudioStream" uid="uid://bybajchk160ys" path="res://assets/Sounds/damage (online-audio-converter.com).mp3" id="16_vavi7"]
[ext_resource type="Theme" uid="uid://c7o8vo0xeq5ju" path="res://Menu/menuTheme.tres" id="17_pd0q3"]
[ext_resource type="Texture2D" uid="uid://ddsdmxpx54t71" path="res://assets/pngs/heart.png" id="18_niqan"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x7va4"]
radius = 14.0357

[sub_resource type="Animation" id="Animation_3w120"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/Outfit:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/Accessory:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_poly0"]
resource_name = "idleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/Outfit:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/Accessory:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_qt0qx"]
resource_name = "idleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/Outfit:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/Accessory:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_u6d8b"]
resource_name = "idleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/Accessory:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/Outfit:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_x2fnm"]
resource_name = "idleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/Outfit:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/Accessory:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_k50sj"]
resource_name = "walkDown"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/Outfit:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/Accessory:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}

[sub_resource type="Animation" id="Animation_t2wfa"]
resource_name = "walkLeft"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/Outfit:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/Accessory:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}

[sub_resource type="Animation" id="Animation_lhiu3"]
resource_name = "walkRight"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/Outfit:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/Accessory:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}

[sub_resource type="Animation" id="Animation_b5kso"]
resource_name = "walkUp"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/Outfit:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/Accessory:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0f31j"]
_data = {
"RESET": SubResource("Animation_3w120"),
"idleDown": SubResource("Animation_poly0"),
"idleLeft": SubResource("Animation_qt0qx"),
"idleRight": SubResource("Animation_u6d8b"),
"idleUp": SubResource("Animation_x2fnm"),
"walkDown": SubResource("Animation_k50sj"),
"walkLeft": SubResource("Animation_t2wfa"),
"walkRight": SubResource("Animation_lhiu3"),
"walkUp": SubResource("Animation_b5kso")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5n7ar"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v4pqw"]
atlas = ExtResource("10_1thqf")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgvfa"]
atlas = ExtResource("10_1thqf")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vx8m"]
atlas = ExtResource("10_1thqf")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yno4l"]
atlas = ExtResource("10_1thqf")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7w1p"]
atlas = ExtResource("10_1thqf")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox00j"]
atlas = ExtResource("10_1thqf")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_euqr3"]
atlas = ExtResource("10_1thqf")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2edy"]
atlas = ExtResource("10_1thqf")
region = Rect2(512, 768, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_uf54e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4pqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgvfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vx8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yno4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7w1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox00j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euqr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2edy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7soui"]
atlas = ExtResource("15_sgy6k")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r016"]
atlas = ExtResource("15_sgy6k")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tirhw"]
atlas = ExtResource("15_sgy6k")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4el7"]
atlas = ExtResource("15_sgy6k")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lbkt"]
atlas = ExtResource("15_sgy6k")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbtgj"]
atlas = ExtResource("15_sgy6k")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yja86"]
atlas = ExtResource("15_sgy6k")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34425"]
atlas = ExtResource("15_sgy6k")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_isnnb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7soui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r016")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tirhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4el7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lbkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbtgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yja86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34425")
}],
"loop": true,
"name": &"ready",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rwb2j"]
bg_color = Color(0.60933, 0.60933, 0.60933, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4h2vy"]
bg_color = Color(0.896479, 0.191454, 0.704886, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="LabelSettings" id="LabelSettings_d1703"]
font_color = Color(0, 0.00689098, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kfpve"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6aary"]
bg_color = Color(0.617455, 0.617455, 0.617455, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6i3x"]
bg_color = Color(0.988235, 0.305882, 0.129412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hlxse"]
font_color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_d21fy")
slime_killer = ExtResource("2_6u2q7")
slime_killermax = ExtResource("3_48rf2")
menu = ExtResource("4_6jm0q")

[node name="Skeleton" type="Node2D" parent="."]
scale = Vector2(1.69289, 1.69289)

[node name="Body" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("1_18yk5")
hframes = 8
vframes = 8

[node name="Hair" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("2_stnuo")
hframes = 8
vframes = 8

[node name="Outfit" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("3_kde5t")
hframes = 8
vframes = 8

[node name="Underwear" type="Sprite2D" parent="Skeleton"]
visible = false
texture = ExtResource("4_c6dog")
hframes = 8
vframes = 8

[node name="Accessory" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("5_rxn3l")
hframes = 8
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x7va4")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0f31j")
}

[node name="Hitbox" type="Area2D" parent="." groups=["player"]]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -5)
scale = Vector2(2.10138, 2.10138)
shape = SubResource("CapsuleShape2D_5n7ar")

[node name="Weapon2" type="Node2D" parent="."]
position = Vector2(-178, 0)
scale = Vector2(0.769509, 0.769509)
script = ExtResource("10_gc2fy")
arrow_scene = ExtResource("11_ewik3")
weapon_distance = -35
shoot_cd = 1.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Weapon2"]
position = Vector2(354.5, 139.5)
rotation = 1.56078
scale = Vector2(-2.64759, -2.84685)
sprite_frames = SubResource("SpriteFrames_uf54e")
speed_scale = 3.0
offset = Vector2(150, 0)

[node name="Timer" type="Timer" parent="Weapon2"]
wait_time = 2.0
one_shot = true

[node name="ShotSound" type="AudioStreamPlayer2D" parent="Weapon2"]
stream = ExtResource("11_jhp4i")

[node name="drawSound" type="AudioStreamPlayer2D" parent="Weapon2"]
stream = ExtResource("12_gllyj")

[node name="BowReady" type="AnimatedSprite2D" parent="Weapon2"]
position = Vector2(104.5, -2.00005)
scale = Vector2(4.84558, 3.88478)
sprite_frames = SubResource("SpriteFrames_isnnb")
animation = &"ready"

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_vavi7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = -161.5
offset_top = 268.0
offset_right = 157.5
offset_bottom = 295.0
theme = ExtResource("17_pd0q3")
theme_override_styles/background = SubResource("StyleBoxFlat_rwb2j")
theme_override_styles/fill = SubResource("StyleBoxFlat_4h2vy")
show_percentage = false

[node name="Exp" type="Label" parent="Control/ProgressBar"]
layout_mode = 0
offset_left = 247.0
offset_top = -23.0
offset_right = 306.0
text = "Level:"
label_settings = SubResource("LabelSettings_d1703")

[node name="Level" type="Label" parent="Control/ProgressBar"]
layout_mode = 0
offset_left = -42.5
offset_top = 2.5
offset_right = -2.5
offset_bottom = 25.5
text = "Exp:"
label_settings = SubResource("LabelSettings_kfpve")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -159.0
offset_top = 244.0
offset_right = 156.0
offset_bottom = 494.0
scale = Vector2(0.0934334, 0.0934334)
texture = ExtResource("18_niqan")

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -96.0
offset_top = 243.5
offset_right = 219.0
offset_bottom = 493.5
scale = Vector2(0.0934334, 0.0934334)
texture = ExtResource("18_niqan")

[node name="TextureRect3" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -127.0
offset_top = 244.0
offset_right = 188.0
offset_bottom = 494.0
scale = Vector2(0.0934334, 0.0934334)
texture = ExtResource("18_niqan")

[node name="BossHP" type="ProgressBar" parent="Control"]
visible = false
layout_mode = 0
offset_left = -257.0
offset_top = -417.0
offset_right = 62.0
offset_bottom = -390.0
scale = Vector2(1.67598, 1.57204)
theme = ExtResource("17_pd0q3")
theme_override_styles/background = SubResource("StyleBoxFlat_6aary")
theme_override_styles/fill = SubResource("StyleBoxFlat_t6i3x")
show_percentage = false

[node name="BossName" type="Label" parent="Control/BossHP"]
layout_mode = 0
offset_left = 105.0
offset_top = -27.5
offset_right = 194.0
offset_bottom = -4.5
text = "Void Knight"
label_settings = SubResource("LabelSettings_hlxse")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
